<resources>
    <string name="app_name">yamaha</string>
    <string name="logo_text">YAMAHA MUSIC SCHOOL</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email2">Email:</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_with">I agree with privacy and policy.</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_accout">Don\'t have an account? Sign up</string>
    <string name="remamber_me">Remember me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="event">Event</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="juniour_course">Junior Cources</string>
    <string name="book_a_lession">Book a Lession</string>
    <string name="book_script_1">If this is you first time here, We recommend that you book a free trial lession.</string>
    <string name="book_script_2">If this is you first time here, We recommend that you book a free trial lession to try our classes and make the best decision for your musical carrier.If this is you first time here, We recommend that you book a free trial lession to try our classes and make the best decision for your musical carrier.</string>
    <string name="welcome">Welcome!</string>
    <string name="book_now">Book Now!</string>
    <string name="upcoming">UPCOMING</string>
    <string name="previous">PREVIOUS</string>
    <string name="subscribe">SUBSCRIBE</string>


    <string name="text_alcohol">Settings</string>

    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_consition">Terms  and Conditions</string>
    <string name="sub_newsletter">Subscribe to Newsletter</string>
    <string name="visit_website">Visit out website</string>
    <string name="schedule">Schedule</string>
    <string name="payment">Payment</string>
    <string name="logout">Logout</string>
    <string name="growing_with_yahamha">Growing with Yamaha</string>
    <string name="advance_ensamble_course">Advance Ensamble Course (ANC)</string>
    <string name="juniour_ensamble_course">Juniour Ensamble Course (ANC)</string>
    <string name="junior_music_course">Junior Music Course (JMC)</string>
    <string name="program_structure">Program Structure</string>
    <string name="details">Details</string>
    <string name="target_student">Target Students</string>
    <string name="number_of_lession">Number of lessions</string>
    <string name="course_material">Course Materials</string>
    <string name="lession_duraion">Lession Duration</string>
    <string name="course_settings">Cource Setting</string>
    <string name="course_fee">Course Fee</string>
    <string name="yamaha_piano_course">Yamaha Piano Course</string>
    <string name="piano_grade_exm">Yamaha Piano Grade Examination</string>
    <string name="yamaha_grade" >YAMAHA  GRADES</string>
    <string name="other_grade" >OTHER  GRADES</string>
    <string name="exm_recom">Examination are recommended but not mendatory.</string>
    <string name="yamaha_grade_exm" >YAMAHA GRADE EXAMINATION</string>
    <string name="course_progressin">Course Progression</string>
    <string name="yamaha_guitar_course">Yamaha Guitar Course</string>
    <string name="let_us_develp">Let us develop the guitarist in you!</string>
    <string name="yamaha_clc_guitar_level_of_exm">Yamaha Classical Guitar Level of Examination</string>
    <string name="music_friend_course">Music Friend Course</string>
    <string name="start_ur_musical">"Start your musical journey with your favorite instrument! "</string>
    <string name="piano_keyboard_course">Piano/Keyboard Course</string>
    <string name="popular_music_course">Popular Music Courses</string>
    <string name="share_ur_creativity">"Share your creativity and passion and become the performer you always wanted to be! "</string>
    <string name="pmc_key">PMC Key Features</string>
    <string name="yamaha_unique_program">Yamaha\'s Unique Program</string>
    <string name="acoustic_guitar">Acoustic Guitar</string>
    <string name="electric_guitar">Electric Guitar</string>
    <string name="electric_bass">Electric Bass</string>
    <string name="yms_course_price_list">YMS COURSE PRICE LIST</string>
    <string name="course_type">Course Type</string>
    <string name="one_month_vat">1 month + VAT</string>
    <string name="one_month_with_vat">1 month with VAT + Reg.Fee</string>
    <string name="three_month_plus">3 month + 10% disc + VAT</string>
    <string name="three_month_plus_10">3 month + 10% disc with VAT + Reg.Fee</string>
    <string name="indivisual_group">Individual/Group</string>
    <string name="faimly_discount">Faimly Discount (10%)</string>
    <string name="juniour_course_caps">JUNIOR COURSE</string>
    <string name="five_month">5 months + VAT</string>
    <string name="five_month_plus_vat">5 months with VAT + Reg.Fee</string>
    <string name="yms_grade_exam_price_list">YMS GRADE EXAMS PRICE LIST</string>
    <string name="exam">Exam</string>
    <string name="level">Level</string>
    <string name="price">Price</string>
    <string name="price_with_vat">Price with VAT</string>
    <string name="student_grade_exam">Student Grade Exam</string>
    <string name="fundamental_skill">Fundamental Skill</string>
    <string name="grade_13">Grade 13</string>
    <string name="teacher_grade_exam">Teacher Grade Exam</string>
    <string name="account_information">Account Information</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="show">Show</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="arbic">Arabic</string>
    <string name="language">Languages</string>
    <string name="city">City</string>
    <string name="riyadh">Riyadh</string>
    <string name="jeddah">Jeddah</string>
    <string name="course_contant">Course Contents</string>
    <string name="sign_up_to_news_letter">Sign Up to Newsletter</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="setting">Settings</string>
    <string name="juniour_course_title">Acquire lifelong musical skill with YAMAHA.</string>
    <string name="yamaha_piano_course_title">Learn, enjoy and express yourself on piano.</string>
    <string name="yamaha_guitar_course_title">Let us develop the guitarist in you</string>
    <string name="music_friend_course_title">Start your musical journey with your favourite instrument</string>
    <string name="popular_music_course_title">Share your creativity and passion and become the performer you always wanted to be.</string>
    <string name="what_to_except">what to excpect at the end of JMC?</string>
    <string name="_4_5_year_old">4-5 Years Old</string>
    <string name="_40_lession_per_year">40 lessions per year</string>
    <string name="textbook_1_4">Textbooks 1-4</string>
    <string name="workbook">Workbooks 1-4</string>
    <string name="student_kit">Student\'s Kit</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="group">Group (4-10 students)</string>
    <string name="audio_and_video">Audio and Video Materials</string>
    <string name="juniour_extension_course">Juniour Extension Course (JXC)</string>
    <string name="acquire_life_long_musical_skill">Acquire life long musical skill with YAHAMA</string>
    <string name="_6_year_old">6 Year old and above</string>
    <string name="indivisual_lession">Indivisual Lessions</string>
    <string name="level_1_be">Level 1 (Beginner) to</string>
    <string name="level_12_advance">Level 12 (Advance)</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="piano_fort_12_book">Pianoforte 1-12 books</string>
    <string name="audio_material_for">Audio materials for</string>
    <string name="book_18">books 1-8</string>
    <string name="or_group_lession">or group lession</string>
    <string name="book_6">Book 6</string>
    <string name="grade_level_6">GRADE LEVEL 6</string>
    <string name="rythm_strum">Rythm strum</string>
    <string name="referance_pices">Reference Pieces</string>
    <string name="exercise_for_solo_playing">Exercise for Solo Playing</string>
    <string name="scale">Scale</string>
    <string name="melody_exercise">Melody Exercise</string>
    <string name="chord_exercise">Chord Exercise</string>
    <string name="training">Training</string>
    <string name="repertori">repertoire</string>
    <string name="music_theory">Music Theory</string>
    <string name="guitar_course">Guitar Course</string>
    <string name="user_name">Emma Watson</string>
    <string name="user_email">emmawatson@hotmail.com</string>
    <string name="the_yamaha_music">The Yahama junior Music Course now in South Arabia</string>
    <string name="script_3">Program music or programatic music is a type of instrumental art music that attempts to musically render an extramusical narrative.</string>
    <string name="hotmail_name">Hitomil\'s Concert</string>
    <string name="march_2022">March 2022</string>
    <string name="dob">June 16th 1992</string>
    <string name="select_city">Please select city</string>
    <string name="select_course">Select Course</string>
    <string name="type_a">Type A</string>
    <string name="type_b">Type B</string>
    <string name="type_c">Type C</string>
    <string name="type_of_course">Type Of Course</string>
    <string name="type_d">Type D</string>
    <string name="type_e">Type  E</string>
    <string name="type_f">Type F</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="preferred_day">Preferred Day</string>

    <string-array name="string_array_alcohol">
        <item>Account Information</item>
        <item>Change Password</item>
        <item>Language</item>
        <item>City</item>
    </string-array>

    <string-array name="string_array_city">
        <item>Please select city</item>
        <item>Riyadh</item>
        <item>Jeddah</item>
    </string-array>

    <string-array name="string_array_course">
        <item>Select course</item>
        <item>Junior Course</item>
        <item>Yamaha Piano Course</item>
        <item>Yamaha Guitar Course</item>
        <item>Music Friend Course</item>
        <item>Music Friend Course</item>
        <item>Popular Music Course</item>
    </string-array>






</resources>