<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".basicfunction.Login2Activity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:textSize="25dp"
        android:fontFamily="@font/daxcompact_bold"
        android:textColor="@color/purple_app_theam_color"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.1"

        >

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        app:layout_constraintWidth_percent="0.9"

        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintVertical_bias="0.4"

        >



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.25"

            
            app:layout_constraintHeight_percent="0.15"
            android:paddingStart="10dp"
            android:hint="@string/email"
            android:background="@drawable/edittext_bg"
            >

        </androidx.appcompat.widget.AppCompatEditText>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"


            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.15"
            android:paddingStart="10dp"
            android:hint="@string/password"
            android:background="@drawable/edittext_bg"
            >

        </androidx.appcompat.widget.AppCompatEditText>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintBottom_toBottomOf="parent"

            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHorizontal_bias="0"

                >

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_layout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:buttonTint="@color/white"
                    app:layout_constraintHeight_percent="0.8"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintWidth_percent="0.15"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/remamber_me_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintStart_toEndOf="@+id/checkbox_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    
                    android:text="@string/remamber_me"
                    android:textColor="@color/white"
                    >

                </androidx.appcompat.widget.AppCompatTextView>
                
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHorizontal_bias="1"

                >
                
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgot_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    

                    android:text="@string/forgot_password"
                    android:textColor="@color/purple_app_theam_color"
                    android:textSize="16dp">


                </androidx.appcompat.widget.AppCompatTextView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login2_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.55"
        android:text="@string/login"
        android:fontFamily="@font/daxcompact_bold"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18dp"
        android:background="@drawable/button_bg"



        >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back_textview_layout"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintVertical_bias="0.625"

        >

    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        
        android:text="@string/dont_have_an_accout"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintVertical_bias="0.95"

        >

    </androidx.appcompat.widget.AppCompatTextView>
</androidx.constraintlayout.widget.ConstraintLayout>