<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/logo_layout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:scaleType="fitXY"


        android:tint="@color/white"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"

        app:layout_constraintVertical_bias="0.2"

        >

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logo_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/daxcompact_medium"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/logo_layout"

        android:text="@string/logo_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="normal"
        >

    </androidx.appcompat.widget.AppCompatTextView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        app:layout_constraintWidth_percent="0.9"

        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintVertical_bias="0.65"


        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintVertical_bias="0.25"
            android:text="@string/signup"
            android:fontFamily="@font/daxcompact_bold"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:background="@drawable/button_bg"

            >

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintVertical_bias="0.55"
            android:fontFamily="@font/daxcompact_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:background="@drawable/button_bg"
            >

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skip_textview_layout"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:fontFamily="@font/daxcompact_medium"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="14dp"
           app:layout_constraintVertical_bias="0.8"

            >

        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>





    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/sub_logo_layout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"

        app:layout_constraintWidth_percent="0.5"

        >

    </androidx.appcompat.widget.AppCompatImageView>

</androidx.constraintlayout.widget.ConstraintLayout>