<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_app_theam_color"
    android:alpha="0.8"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintWidth_percent="0.8"

        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cp_text1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_vertical"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_heading_14dp"
            android:fontFamily="@font/daxcompact_bold"
            >

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cross_image_layout"
            android:layout_width="17dp"
            android:layout_height="18dp"
            android:src="@drawable/cross_icon"


            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"


            >

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/cross_image_layout"
            >




            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:alpha="1"
                android:background="@color/purple_app_theam_color"

                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="1"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:weightSum="10"
                    >


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cp_text2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:inputType="textPassword"
                    android:gravity="center_vertical"

                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:textSize="@dimen/default_text_size_12dp"
                    android:fontFamily="@font/daxcompact_medium"
                    android:textColorHint="@color/black"
                    android:hint="@string/current_password"
                    ></androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cp_text5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/purple_app_theam_color"
                    android:textSize="@dimen/default_text_size_12dp"
                    android:fontFamily="@font/daxcompact_medium"
                    android:text="@string/show"
                    ></androidx.appcompat.widget.AppCompatTextView>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:weightSum="10"
                >





                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cp_text3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:textSize="@dimen/default_text_size_12dp"
                    android:fontFamily="@font/daxcompact_medium"
                    android:textColorHint="@color/black"
                    android:hint="@string/new_password"
                    ></androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cp_text6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/purple_app_theam_color"
                    android:textSize="@dimen/default_text_size_12dp"
                    android:fontFamily="@font/daxcompact_medium"
                    android:text="@string/show"
                    ></androidx.appcompat.widget.AppCompatTextView>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:weightSum="10"
                >





                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cp_text4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_12dp"
                    android:fontFamily="@font/daxcompact_medium"
                    android:textColorHint="@color/black"
                    android:hint="@string/confirm_password"
                    ></androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cp_text7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/purple_app_theam_color"
                    android:textSize="@dimen/default_text_size_12dp"
                    android:fontFamily="@font/daxcompact_medium"
                    android:text="@string/show"
                    ></androidx.appcompat.widget.AppCompatTextView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cp_text8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/daxcompact_medium"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading_extra_20dp"></androidx.appcompat.widget.AppCompatTextView>

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>